--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,11 @@
 # 抽象工厂模式
-abstractClassName=com.create.factory.abs.SpringSkinFactory
+abstractClassName=com.create.factory.abs.SummerSkinFactory
+
+# 工厂方法
+factoryuri=com.create.factory.method.FactoryB
 
 # 建造者模式
-buildClassName=com.create.builder.DevilBuilder
+buildClassName=com.create.builder.HeroBuilder
 
 # 适配器模式
 adapterClassName=com.structural.adapter.OperationAdapter
